# mvp

./: .ansible-lint  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.jsonc  .pc_env  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CODE_STYLE.md  Dockerfile  Dockerfile.debian  Makefile  README.md  Tiltfile  bootstrap  cookiecutter.json  copier.yml  devbox.json  docker-compose.yml  extensions.py  kubernetes.yml  nx.json  package-lock.json  package.json  process-compose.yml  pyproject.toml  requirements.txt  taskfile.yml
.copier/: update_dotenv.py
.devcontainer/: devcontainer.json
.github/: renovate.json5
.github/workflows/: devcontainer.yml  docker.yml  publish.yml  pytest.yml  release-please.yml
ansible/: ansible.cfg  hosts  playbook.yml
cloud-config/: cloud-init.ubuntu.yml
cloud-init/: cloud-init.ubuntu.yml  instance-data.json
project/: .env.example.j2  .gitignore  .shellcheckrc  LICENSE.j2  Makefile  README.md.j2  devbox.json.j2  docker-compose.yml.j2  pyproject.toml.j2  taskfile.yml.j2
project/.github/: FUNDING.yml.j2
project/.github/workflows/: release-please.yml
project/ansible/collections/: requirements.yml
project/cloud-init/: cloud-init.ubuntu.yml
project/taskfiles/: docker.yml.j2  orbstack.yml  redis.yml  uv.yml.j2
project/tilt/: kubernetes.yaml
taskfiles/: docker.yml  orbstack.yml  poetry.yml  uv.yml
tasks/: docker.yml  poetry.yml
tests/: test_placeholder.py
tilt/: Dockerfile  app.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .markdownlint.jsonc  .markdownlintignore  .pre-commit-config.yaml  .pyscn.toml  .tool-versions  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  devbox.json  docker-bake.hcl  docker-compose.yml  pyproject.toml  repomix.config.json5  taskfile.yml
{{cookiecutter.project_slug}}/.claude/: settings.json
{{cookiecutter.project_slug}}/.devcontainer/: devcontainer.json  docker-compose.extend.yml
{{cookiecutter.project_slug}}/.github/: FUNDING.yml  renovate.json5
{{cookiecutter.project_slug}}/.github/workflows/: docker.yml
{{cookiecutter.project_slug}}/ansible/: ansible.cfg
{{cookiecutter.project_slug}}/taskfiles/: docker.yml  doppler.yml  uv.yml
{{cookiecutter.project_slug}}/tests/: conftest.py  test_placeholder.py
{{cookiecutter.project_slug}}/tilt/: Tiltfile
